# bevyhub-api

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/api/: local_crate_id.rs  mod.rs  package_locally.rs  populate_command.rs
cli/src/aws/: mod.rs  s3.rs
config/: cors.json
examples/: curl.rs  export_bindings.rs  mongo.rs  server.rs
src/: lib.rs  main.rs
src/cargo_registry/: cargo_registry.rs  crates_io.rs  local_cache_registry.rs  mod.rs  throttle.rs
src/crate_doc/: cargo_manifest_types.rs  crate_doc.rs  crate_doc_api.rs  mod.rs  unpack_crate_to_db.rs
src/document_db/: doc_id.rs  document_collection.rs  document_db.rs  document_stream.rs  memory_collection.rs  memory_db.rs  mod.rs  mongo_collection.rs  mongo_db.rs
src/object_storage/: fs_storage.rs  mod.rs  object_storage.rs  s3_storage.rs  utils_storage_path.rs
src/scene_doc/: mod.rs  replication_config.rs  scene_app.rs  scene_doc.rs  scene_doc_api.rs  scene_include_tree.rs  set_latest_scenes_in_db.rs
src/server/: app_routes.rs  app_state.rs  crate_routes.rs  mod.rs  scene_routes.rs  server.rs
src/server/layers/: cors.rs  no_cache.rs
src/services/: api_environment.rs  mod.rs  services.rs  unpack_tarball.rs
src/types/: app_error.rs  crate_id.rs  mod.rs  scene_id.rs
tests/: mod.rs  mongo_sets_latest.rs  validate_cargo_manifests.rs
