[package]
name = "cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bevyhub_api.workspace = true
anyhow.workspace = true

tokio.workspace = true
futures.workspace = true

toml.workspace = true
semver.workspace = true
cargo-manifest.workspace = true

# forky_fs.path = "../../forky/crates/forky_fs"
forky = { version = "0.2.0-rc.6", features = ["fs"] }
clap = { version = "4.2", features = [] }

[dev-dependencies]
sweet.workspace = true
